--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -46,3 +46,16 @@ td,div,p,a { font-family: arial,sans-serif; }
 a { text-decoration : none; color : #000;font-size:13px; }
 
 td.blue {color:#00F;} 
+
+head { display: block; }
+title { display: block; font-size: 200%; font-weight: bold; font-family: arial,sans-serif;}
+.pnodata{
+	font-family: "Myriad Pro", "sans-serif";
+	font-size: 20pt;
+	color: #F00;
+}
+
+label {
+color: #00F;
+font-size: 8pt;
+}
